--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,13 @@ flutter:
           weight: 700
         - asset: assets/fonts/muli/Muli-Light.ttf
           weight: 300
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/cairo/Cairo-Black.ttf
+        - asset: assets/fonts/cairo/Cairo-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/cairo/Cairo-Light.ttf
+          weight: 300
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
